# pinned-affinity-executor-cpp

./: .gitmodules  CMakeLists.txt
src/: executor.cpp  main.cpp  pinned_affinity_executor.hpp
